Add YouTube video embed

--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
                             </div>
                             <div class="play-ripple"></div>
                         </div>
-                        <h3>Demo Video Coming Soon</h3>
-                        <p>Watch how easy it is to buy, send, and manage Bitcoin using simple USSD codes</p>
+                        <h3>Watch Bitcoin USSD Demo</h3>
+                        <p>See how easy it is to buy, send, and manage Bitcoin using simple USSD codes across Africa</p>
                         <div class="video-features">
                             <div class="video-feature">
                                 <span class="feature-emoji">⚡</span>
@@ -407,19 +407,17 @@
                                 <span>Secure</span>
                             </div>
                         </div>
-                        <div class="video-note">
-                            <p>Video will be embedded automatically when URL is provided</p>
-                        </div>
                     </div>
                 </div>
                 <div id="video-embed" class="video-embed" style="display: none;">
                     <iframe 
                         width="100%" 
                         height="100%" 
-                        src="" 
+                        src="https://www.youtube.com/embed/r0weTNSGCuc?si=U-AR2IS5Z-_Dn2LK" 
                         title="Bitcoin Lightning USSD Demo" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        referrerpolicy="strict-origin-when-cross-origin" 
                         allowfullscreen>
                     </iframe>
                     <div class="video-controls">
