Fix YouTube embed with autoplay

--- a/index.html
+++ b/index.html
@@ -413,10 +413,10 @@
                     <iframe 
                         width="100%" 
                         height="100%" 
-                        src="https://www.youtube.com/embed/r0weTNSGCuc?si=U-AR2IS5Z-_Dn2LK" 
+                        src="https://www.youtube.com/embed/r0weTNSGCuc?autoplay=1&mute=1&loop=1&playlist=r0weTNSGCuc&controls=1&modestbranding=1&rel=0&showinfo=0&iv_load_policy=3" 
                         title="Bitcoin Lightning USSD Demo" 
                         frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                         referrerpolicy="strict-origin-when-cross-origin" 
                         allowfullscreen>
                     </iframe>
