--- a/index.html
+++ b/index.html
@@ -410,16 +410,7 @@
                     </div>
                 </div>
                 <div id="video-embed" class="video-embed" style="display: none;">
-                    <iframe 
-                        width="100%" 
-                        height="100%" 
-                        src="https://www.youtube.com/embed/r0weTNSGCuc?autoplay=1&mute=1&loop=1&playlist=r0weTNSGCuc&controls=1&modestbranding=1&rel=0&showinfo=0&iv_load_policy=3" 
-                        title="Bitcoin Lightning USSD Demo" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                        referrerpolicy="strict-origin-when-cross-origin" 
-                        allowfullscreen>
-                    </iframe>
+                   <iframe width="100%" height="100%"       src="https://www.youtube.com/embed/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIWhttps://youtu.be/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <div class="video-controls">
                         <button class="volume-toggle" onclick="toggleVolume()">
                             <i class="fas fa-volume-up"></i>
