--- a/index.html
+++ b/index.html
@@ -393,20 +393,9 @@
                         </div>
                         <h3>Watch Bitcoin USSD Demo</h3>
                         <p>See how easy it is to buy, send, and manage Bitcoin using simple USSD codes across Africa</p>
-                        <div class="video-features">
-                            <div class="video-feature">
-                                <span class="feature-emoji">⚡</span>
-                                <span>Lightning Fast</span>
-                            </div>
-                            <div class="video-feature">
-                                <span class="feature-emoji">📱</span>
-                                <span>Any Phone</span>
-                            </div>
-                            <div class="video-feature">
-                                <span class="feature-emoji">🔒</span>
-                                <span>Secure</span>
-                            </div>
-                        </div>
+                      <div>
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIWhttps://youtu.be/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      </div>
                     </div>
                 </div>
                 <div id="video-embed" class="video-embed" style="display: none;">
