--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <p>See Bitcoin Lightning USSD in action</p>
             </div>
             <div class="video-container">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIWhttps://youtu.be/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIWhttps://youtu.be/r0weTNSGCuc?si=Ve7GKIv7Ix8prPIW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
