Add comprehensive FAQ content

--- a/index.html
+++ b/index.html
@@ -463,6 +463,87 @@
                         <p>No! That's the beauty of USSD technology. It works on any mobile phone - smartphones, feature phones, or basic phones. No internet connection or mobile apps required. Just dial the code and start using Bitcoin.</p>
                     </div>
                 </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>What is the MeTTa AI assistant and how does it help?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>MeTTa is our advanced reasoning engine that provides intelligent assistance through the USSD interface. It can explain Bitcoin concepts in simple terms, help you understand exchange rates, guide you through transactions, and answer questions in natural language. Just type questions like "What is Bitcoin?" or "Show me current rates" in the USSD menu.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>Which African countries and mobile networks are supported?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>We support major mobile networks across Africa including Safaricom (Kenya), MTN (multiple countries), Airtel Africa, Orange, Vodacom, and many others. The service works in Kenya, Nigeria, Ghana, Tanzania, Uganda, Rwanda, South Africa, and expanding to more countries. Check with your local mobile operator for USSD availability.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>What are the transaction fees?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Lightning Network transactions have very low fees, typically less than 1% of the transaction amount. Mobile money conversion fees vary by country and operator, usually 1-3%. There are no hidden fees - all costs are shown before you confirm any transaction. USSD access itself is free on most networks.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>How do I check my Bitcoin balance?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Simply dial *384*3036# and your current Bitcoin balance will be displayed on the main menu screen in both satoshis (sats) and your local currency equivalent. You can check your balance anytime, anywhere, even without internet. Transaction history is also available through the menu.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>Can I send Bitcoin to someone who doesn't use this service?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Yes! You can send Bitcoin to any Lightning Network wallet or Bitcoin address. The recipient doesn't need to use our USSD service. You can also generate Lightning invoices to receive payments from any Lightning-compatible wallet worldwide. The service is fully interoperable with the global Bitcoin network.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>What happens if I lose my phone or SIM card?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Your Bitcoin is secured by our MeTTa system and can be recovered. Contact customer support immediately with your phone number and identity verification. We recommend setting up a recovery PIN through the USSD menu. For maximum security, consider backing up your wallet to a hardware device once you accumulate significant amounts.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>How does the AI assistant understand my local language?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Our MeTTa AI system includes advanced natural language processing for major African languages including English, Swahili, French, Arabic, Hausa, Yoruba, Amharic, and others. You can ask questions or give commands in your preferred language, and the system will respond appropriately. Language settings can be changed in the USSD menu.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>Is there a daily transaction limit?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Transaction limits vary by country and mobile operator regulations. Typically, you can transact up to $500 USD equivalent per day for verified accounts. Higher limits are available with additional verification. The system will show your current limits in the USSD menu. Lightning Network itself has no limits - restrictions come from local financial regulations.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question" onclick="toggleFAQ(this)">
+                        <h3>Can I use this for business payments?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Absolutely! Many small businesses across Africa use our service to accept Bitcoin payments, pay suppliers, or send remittances. You can generate payment requests, track transactions, and even integrate with simple point-of-sale systems. Business accounts get higher transaction limits and additional features like batch payments and reporting.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
