Fix minimum purchase, simulator links, FAQ dropdowns, and remove statistics

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             </div>
             <div class="nav-links">
                 <a href="#features">Features</a>
-                <a href="#statistics">Statistics</a>
                 <a href="#how-it-works">How it Works</a>
                 <a href="#demo">Demo</a>
                 <a href="#video">Video</a>
@@ -44,7 +43,6 @@
         </nav>
         <div class="mobile-menu" id="mobile-menu">
             <a href="#features">Features</a>
-            <a href="#statistics">Statistics</a>
             <a href="#how-it-works">How it Works</a>
             <a href="#demo">Demo</a>
             <a href="#video">Video</a>
@@ -340,7 +338,7 @@
                             <div class="detail-item">
                                 <span class="detail-icon">💰</span>
                                 <span class="detail-label">Min Purchase:</span>
-                                <span class="detail-value">Local currency equivalent</span>
+                                <span class="detail-value">10 shs</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-icon">📊</span>
@@ -362,7 +360,7 @@
                         <p>Open the simulator and experience Bitcoin transactions through USSD</p>
                         <a href="https://developers.africastalking.com/simulator" target="_blank" class="btn btn-large">
                             <i class="fas fa-external-link-alt"></i>
-                            Open USSD Simulator
+                            Ready to Test? Recording
                         </a>
                     </div>
                 </div>
@@ -424,7 +422,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>You can start with as little as the equivalent of $0.10 USD in your local currency. For example, 10 KES in Kenya, 50 Naira in Nigeria, or 1 Cedi in Ghana. This low minimum makes Bitcoin accessible to everyone across Africa and perfect for learning how cryptocurrency works without risk.</p>
+                       <p>You can start with as little as 10 shs (shillings). This low minimum makes Bitcoin accessible to everyone across Africa and perfect for learning how cryptocurrency works without any significant financial risk.</p>
                     </div>
                 </div>
                 <div class="faq-item">
