Make demo icon button link to simulator

--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
                         </div>
                     </div>
                     <div class="demo-action">
-                        <div class="demo-icon">
+                        <a href="https://developers.africastalking.com/simulator" target="_blank" class="demo-icon">
                             <i class="fas fa-external-link-alt"></i>
-                        </div>
+                        </a>
                         <h4>Ready to Test?</h4>
                         <p>Open the simulator and experience Bitcoin transactions through USSD</p>
                         <a href="https://developers.africastalking.com/simulator" target="_blank" class="btn btn-large">
