--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             </div>
             <div class="faq-container">
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>What is Bitcoin Lightning USSD?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
@@ -399,7 +399,7 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>How do I get started?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
@@ -408,7 +408,7 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>Is it safe and secure?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
@@ -417,16 +417,16 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>What's the minimum amount I can buy?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                       <p>You can start with as little as 10 shs (shillings). This low minimum makes Bitcoin accessible to everyone across Africa and perfect for learning how cryptocurrency works without any significant financial risk.</p>
+                        <p>You can start with as little as 10 shs (shillings). This low minimum makes Bitcoin accessible to everyone across Africa and perfect for learning how cryptocurrency works without any significant financial risk.</p>
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>How fast are transactions?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>Can I withdraw my Bitcoin to M-Pesa?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
@@ -444,7 +444,7 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
+                    <div class="faq-question">
                         <h3>What languages are supported?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
@@ -459,87 +459,6 @@
                     </div>
                     <div class="faq-answer">
                         <p>Not at all! That's the revolutionary aspect of USSD technology. It works on any mobile phone - smartphones, feature phones, or even the most basic Nokia phones from 15 years ago. No internet connection, mobile apps, or data plan required. Just dial *384*3036# and start using Bitcoin immediately.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>What is the MeTTa AI assistant and how does it help?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>MeTTa is our advanced AI reasoning engine that acts as your personal Bitcoin advisor through USSD. It can explain complex Bitcoin concepts in simple terms, help you understand exchange rates, guide you through transactions, provide financial advice, and answer questions in natural language. Just type questions like "What is Bitcoin?", "Show me current rates", or "How do I send money to Nigeria?" in the USSD menu and get intelligent responses.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Which African countries and mobile networks are supported?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>We support major mobile networks across Africa including Safaricom (Kenya), MTN (Nigeria, Ghana, Uganda, Rwanda, South Africa), Airtel Africa (15+ countries), Orange (West/Central Africa), Vodacom (South Africa, Tanzania, DRC), Tigo, and many others. Currently active in Kenya, Nigeria, Ghana, Tanzania, Uganda, Rwanda, South Africa, Senegal, Ivory Coast, and rapidly expanding. Check with your local mobile operator for USSD availability.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>What are the transaction fees?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Our fees are transparent and competitive: Lightning Network transactions cost less than 1% (often just a few cents), mobile money conversion fees are 1-3% depending on your country and operator, and USSD access is free on most networks. For example, sending $10 worth of Bitcoin typically costs under $0.10 total. All fees are clearly shown before you confirm any transaction - no hidden charges ever.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>How do I check my Bitcoin balance?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Just dial *384*3036# and your current Bitcoin balance appears immediately on the main menu screen in both satoshis (sats) and your local currency equivalent. You can check your balance 24/7 from anywhere, even in remote areas without internet. Transaction history, recent payments, and spending analytics are also available through the menu options.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Can I send Bitcoin to someone who doesn't use this service?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Absolutely! You can send Bitcoin to any Lightning Network wallet (like Phoenix, Breez, Wallet of Satoshi) or regular Bitcoin address worldwide. The recipient doesn't need to use our USSD service. You can also generate Lightning invoices to receive payments from any Lightning-compatible wallet globally. The service is fully interoperable with the entire Bitcoin ecosystem.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>What happens if I lose my phone or SIM card?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Don't panic! Your Bitcoin is safely secured by our MeTTa system and can be recovered. Contact customer support immediately with your phone number and identity verification documents. We recommend setting up a recovery PIN and backup phone number through the USSD menu. For larger amounts, consider backing up your wallet to a hardware device or writing down your recovery phrase.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>How does the AI assistant understand my local language?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Our MeTTa AI system uses advanced natural language processing trained specifically on African languages and dialects. It understands context, slang, and cultural nuances in English, Swahili, French, Arabic, Hausa, Yoruba, Amharic, Wolof, and many others. You can mix languages in the same conversation, and the AI will respond appropriately. Language preferences can be set in the USSD menu.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Is there a daily transaction limit?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Daily limits vary by country due to local regulations: typically $100-500 USD equivalent for basic accounts, up to $2,000+ for verified accounts with ID documents. For example, in Kenya it's 70,000 KES, in Nigeria it's ₦200,000. Higher limits available with additional verification. Your current limits are always shown in the USSD menu. The Lightning Network itself has no limits - restrictions come from local financial regulations.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Can I use this for business payments?</h3>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>Perfect for business! Many small businesses across Africa use our service to accept Bitcoin payments from customers, pay suppliers internationally, send employee remittances, or manage cash flow. You can generate payment QR codes, track all transactions, send bulk payments, and get detailed reports. Business accounts get higher limits, priority support, and integration options with POS systems.</p>
                     </div>
                 </div>
             </div>
